switch to valueOf where appropriate